--- a/pension.example.toml
+++ b/pension.example.toml
@@ -1,5 +1,5 @@
-[aws]
-profile = "default"
+aws_profiles = ["default"]
+coalesce = false
 
 [notify.slack]
 hook_url = "https://hooks.slack.com/..."
